--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,22 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# 忽略构建输出和临时文件
+/target/
+*.log
+*.tmp
+
+# 忽略 IDE 生成的临时文件和设置
+/.idea/
+*.iml
+*.iws
+*.ipr
+*.classpath
+*.gradle/
+build/
+
+# 忽略测试输出和报告
+/target/test-classes/
+/target/surefire-reports/
+/target/site/
